--- a/style.css
+++ b/style.css
@@ -4,6 +4,21 @@
     padding: 0;
 }
 
+
+header{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: white;
+    height: 119px;
+    font-size: larger;
+}
+
+#play_button{
+    height: fit-content;
+    width: 121px;
+}
+
 .tabellone  {
     max-width: 800px;
     flex-basis: 100%;
@@ -18,9 +33,25 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    border:1px solid black;
 }
 
 main{
     min-height: 100vh;
-    display: flex;    
+    display: flex; 
+    background-color: rgba(0,202,177, 1);   
+}
+
+/*.header_container{
+    max-width: 1000px;
+
+}*/
+
+footer{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    font-size: larger;
+    height: 78px;
+    margin-left: 26px;
 }
