--- a/BONUS/style.css
+++ b/BONUS/style.css
@@ -30,10 +30,13 @@ header{
     max-width: 800px;
     flex-basis: 100%;
     row-gap: 0px;
-    grid-template-columns: repeat(10, 1fr);
     margin: 0 auto;
     background-color: white;
     
+}
+
+.easy{
+    grid-template-columns: repeat(10, 1fr);
 }
 
 .medium{
